--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
     <div class="profile-card">
         <div class="image">
-            <img src="./media/profile.jpg" alt="" class= "profile-img">
+            <img src="./media/profile.jpg" alt="CR" class= "profile-img">
         </div>
 
         <div class="text-data">
