--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                 <i class='bx bxl-instagram'></i>
             </a>
             </form>
-            <a href="#"style="background: #ff0000"  class="link">
+            <a href="#"style=background: #ff0000  class="link">
                 <i class='bx bxl-youtube'></i>
             </a>
-            <a href="#"style="background: #4267b2"  class="link">
+            <a href="#"style=background: #4267b2  class="link">
                 <i class='bx bxl-facebook'></i>
             </a>
-            <a href="#"style="background: #1da1f2"  class="link">
+            <a href="#"style=background: #1da1f2  class="link">
                 <i class='bx bxl-twitter'></i>            
             </a>
         </div>
