--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <body>
     <div class="video-container">
         <video autoplay muted loop style="pointer-events: none;">
-            <source src="./media/movie.mp4" type="video/mp4" />     
+            <source src="/movie.mp4" type="video/mp4" />     
         </video>
     </div>
     
     <div class="profile-card">
         <div class="image">
-            <img src="./media/profile.jpg" alt="CR" class= "profile-img">
+            <img src="/profile.jpg" alt="CR" class= "profile-img">
         </div>
 
         <div class="text-data">
