--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
 
         <div class="media-buttons">
             <form>
-            <a href= https://www.instagram.com/round_earther/ target="_blank" style=background:#d61555 class="link">
+            <a href= https://www.instagram.com/round_earther/ target="_blank" style= "background:#d61555" class="link">
                 <i class='bx bxl-instagram'></i>
             </a>
             </form>
-            <a href="#"style="background: #ff0000"  class="link">
+            <a href= https://www.youtube.com/@filthycasual target="_blank" style= "background: #ff0000"  class="link">
                 <i class='bx bxl-youtube'></i>
             </a>
-            <a href="#"style="background: #4267b2"  class="link">
+            <a href= https://www.facebook.com/chad.rocca/ target="_blank" style= "background: #4267b2" class="link">
                 <i class='bx bxl-facebook'></i>
             </a>
-            <a href="#"style="background: #1da1f2"  class="link">
+            <a href= https://x.com/ThicahbodCrane target="_blank" style="background: #1da1f2"  class="link">
                 <i class='bx bxl-twitter'></i>            
             </a>
         </div>
