--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="text-data">
-            <span class="name">SHAAAAARKS</span>
+            <span class="name">SHAAARKS</span>
             <span class="job">SJS</span>
         </div>
 
